Updated Bot status

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea
 __pycache__
-/cogs/__pycache__
-/cogs/Events/__pycache__
-/cogs/Moderation/__pycache__
+cogs/__pycache__
+cogs/Events/__pycache__
+cogs/Moderation/__pycache__
+cogs/Information/__pycache__
