Updated git ignore, fixed typo

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ cogs/Events/__pycache__
 cogs/Moderation/__pycache__
 cogs/Information/__pycache__
 cogs/Music/Lavalink-python/logs
+cogs/Linuxinfo
+cogs/Meme
