--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astroid==2.2.5
 async-timeout==3.0.1
 asyncurban==0.3.3
 attrs==19.1.0
+beautifulsoup4==4.8.0
 cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -34,7 +35,6 @@ multidict==4.5.2
 pbr==5.4.3
 psutil==5.6.3
 pycosat==0.6.3
-pygame==1.9.6
 pylint==2.3.1
 pynput==1.4.2
 pyowm==2.10.0
@@ -44,6 +44,7 @@ ruamel.yaml==0.16.5
 ruamel.yaml.clib==0.1.2
 simplejson==3.16.0
 six==1.12.0
+soupsieve==1.9.4
 StringGenerator==0.3.3
 testresources==2.0.1
 typed-ast==1.4.0
