--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ cogs/Information/__pycache__
 cogs/Music/Lavalink-python/logs
 cogs/Linuxinfo
 cogs/Meme
+logs/fun.log
+logs/images.log
+logs/information.log
+logs/moderation.log
+logs/owner.log
+logs/utility.log
