Update GitIngore + README

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 .idea
+.vscode
 __pycache__
 cogs/__pycache__
 cogs/Events/__pycache__
-cogs/Moderation/__pycache__
+cogs/Fun/__pycache__
+cogs/Images/__pycache__
 cogs/Information/__pycache__
-cogs/Music/Lavalink-python/logs
+cogs/Moderation/__pycache__
+cogs/Owner/__pycache__
+cogs/Utility/__pycache__
+cogs/Music/Lavalink_Files/logs
 cogs/Linuxinfo
 cogs/Meme
