--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiogoogletrans==3.3.2
 aiohttp==3.5.4
+altgraph==0.16.1
 astroid==2.2.5
 async-timeout==3.0.1
 asyncurban==0.3.3
@@ -35,6 +36,7 @@ multidict==4.5.2
 pbr==5.4.3
 psutil==5.6.3
 pycosat==0.6.3
+PyHamcrest==1.9.0
 pylint==2.3.1
 pynput==1.4.2
 pyowm==2.10.0
@@ -51,4 +53,5 @@ typed-ast==1.4.0
 urllib3==1.25.6
 websockets==6.0
 wrapt==1.11.2
+xmltodict==0.12.0
 yarl==1.3.0
