Switch to Aiohttp for meme command

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 aiogoogletrans==3.3.2
-aiohttp==3.3.2
+aiohttp==3.6.2
 altgraph==0.16.1
 astroid==2.2.5
 async-timeout==3.0.1
 asyncurban==0.3.3
 attrs==19.1.0
 beautifulsoup4==4.8.0
+bitly-api==0.3
 cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -27,7 +28,6 @@ import-expression==0.3.8.post2
 ipinfo==2.0.0
 isort==4.3.21
 jishaku==1.15.0.134
-ksoftapi==0.1.5b0
 lavalink==3.0.0
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
