--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiogoogletrans==3.3.2
-aiohttp==3.6.2
+aiohttp==3.5.4
 altgraph==0.16.1
 astroid==2.2.5
 async-timeout==3.0.1
@@ -7,6 +7,7 @@ asyncurban==0.3.3
 attrs==19.1.0
 beautifulsoup4==4.8.0
 bitly-api==0.3
+braceexpand==0.1.5
 cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -24,10 +25,10 @@ grizzled-python==2.2.0
 hastebin.py==0.2
 humanize==0.5.1
 idna==2.8
-import-expression==0.3.8.post2
+import-expression==0.7.0
 ipinfo==2.0.0
 isort==4.3.21
-jishaku==1.15.0.134
+jishaku==1.17.0.169
 lavalink==3.0.0
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
