--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ six==1.12.0
 soupsieve==1.9.4
 StringGenerator==0.3.3
 testresources==2.0.1
+timeago==1.0.10
 typed-ast==1.4.0
 urllib3==1.25.6
 websockets==6.0
