--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,48 @@
 aiogoogletrans==3.3.2
 aiohttp==3.6.2
 altgraph==0.16.1
-astroid==2.3.3
 async-timeout==3.0.1
 asyncurban==0.3.3
 attrs==19.3.0
-beautifulsoup4==4.8.2
 bitlyshortener==0.3.3
 braceexpand==0.1.5
 cachetools==4.0.0
 certifi==2019.9.11
 chardet==3.0.4
-Click==7.1.1
+click==7.1.1
 cowpy==1.1.0
 dadjokes==1.3
 dblpy==0.3.4
-discord==1.0.1
 discord.py==1.3.2
-dnspython==1.16.0
+dnspython==1.15.0
 dnspython3==1.15.0
 forex-python==1.5
 fortune==1.1.0
 geojson==2.5.0
 grizzled-python==2.2.0
-hastebin.py==0.2
-humanize==0.5.1
-idna==2.8
+humanize==2.0.0
+idna==2.9
 import-expression==1.0.0
 ipinfo==3.0.0
 isort==4.3.21
-jishaku==1.17.0.169
+jishaku==1.18.2.188
 lavalink==3.0.0
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 mcstatus==2.3.0
 mtranslate==1.6
 multidict==4.7.5
-pbr==5.4.4
 psutil==5.7.0
 pycosat==0.6.3
-PyHamcrest==2.0.2
-pylint==2.4.4
-pynput==1.6.8
-pyowm==2.10.0
-python-xlib==0.26
 ratelimiter==1.2.0.post0
 requests==2.23.0
-ruamel.yaml==0.16.10
-ruamel.yaml.clib==0.2.0
-simplejson==3.16.0
+simplejson==3.17.0
 six==1.14.0
-soupsieve==2.0
 StringGenerator==0.3.3
 testresources==2.0.1
-timeago==1.0.10
 typed-ast==1.4.0
 urllib3==1.25.8
-websockets==6.0
+websockets==8.1
 wrapt==1.11.2
 xmltodict==0.12.0
 yarl==1.4.2
