--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dblpy==0.3.4
 discord.py==1.3.2
 dnspython==1.16.0
 dnspython3==1.15.0
+foaas==0.2.0
 forex-python==1.5
 fortune==1.1.0
 geojson==2.5.0
@@ -32,6 +33,7 @@ mccabe==0.6.1
 mcstatus==2.3.0
 mtranslate==1.6
 multidict==4.7.5
+pbr==5.4.4
 psutil==5.7.0
 pycosat==0.6.3
 ratelimiter==1.2.0.post0
