--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ fabric.properties
 *.class
 
 # Log file
+*.log
 
 # BlueJ files
 *.ctxt
@@ -111,6 +112,7 @@ fabric.properties
 *.rar
 
 # my folders and files#
+/logs/
 /target/
 /build/
 /.settings/
