--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 aiogoogletrans==3.3.2
 aiohttp==3.6.2
 altgraph==0.17
+astunparse==1.6.3
 async-timeout==3.0.1
 asyncurban==0.3.3
+attr==0.3.1
 attrs==19.3.0
 bitlyshortener==0.3.5
 braceexpand==0.1.5
@@ -10,6 +12,7 @@ cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
 cowpy==1.1.0
 dadjokes==1.3
 dblpy==0.3.4
